# pfc_util

./: .gitattributes  .readthedocs.yaml  LICENSE  README.md  README.rst  README.txt  history.py  ortho_lattice_generator.py  pfc.py  pfc_im.py  profile_editor.py  setup.cfg  setup.py  test.npz
base/: common.py  field.py  field_util.py  fields.py  pfc_base.py
docs/: requirements.txt
docs/source/: api.rst  concepts.rst  conf.py  index.rst  intro.rst  start.rst
docs/source/api/: pfc.pfc6.rst  pfc.rst  pfc6.rst  toolkit.rst
docs/source/api/pfc/: base.rst  conserved.rst  mu.rst  relax.rst
docs/source/api/pfc6/: base.rst  conserved.rst  mu.rst  relax.rst
docs/source/concepts/: minim.rst
legacy/: pfc.py  pfc_im.py
pfc_core/: base.py  evolution.py
profile_prompt/: .editor_prompt.py.swp  .prompt.py.swp  editor_prompt.py  prompt.py
src/pfc_util/: __init__.py  history.py  pfc.py
src/pfc_util.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pfc_util/base/: common.py  field_util.py  fields.py
src/pfc_util/core/: __evolution.py  __init__.py  _evolution.py  abc.py  base.py  evolution.py  version.py
src/pfc_util/extra/: __gaussian.py  __init__.py  __pfc6.py  _pfc6.py  gaussian.py  pfc6.py
src/pfc_util/legacy/: pfc.py  pfc_im.py
src/pfc_util/pfc_core/: base.py  evolution.py
src/pfc_util/toolkit/: __init__.py  edit.py  ortho_lattice_generator.py  profile_editor.py  resource.py  rotated.py  routine.py  static.py
src/pfc_util/utils/: __init__.py  fft.py  misc.py
toolkit/: ortho_lattice_generator.py  profile_editor.py
(+61 files in other folders)
