[metadata]
name = torusgrid
version = 0.0.1
author = Michael Wang
author_email = mike.wang96029@gmail.com
description = periodic fields with definite dimensions equipped with FFT operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michael-960/torusgrid
project_urls = 
    Bug Tracker = https://github.com/michael-960/torusgrid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

