[metadata]
name = pfc_util
version = 0.4.6
author = Michael Wang
author_email = mike.wang96029@gmail.com
description = package for PFC (phase field crystal) simulations
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/michael-960/pfc_util
project_urls = 
    Bug Tracker = https://github.com/michael-960/pfc_util/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

install_requires =
    numpy >= 1.21.2
    scipy >= 1.7
    pyfftw >= 0.12
    matplotlib >= 3.5.1
    torusgrid >= 0.4.5
    rich >= 12.4.0

[options.package_data]
* = *.npz, *.field

[options.packages.find]
where = src

